<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_maps">DeepEstate</string>
    <string name="asset_details">Asset Details</string>
    <string name="action_settings">Settings</string>
    <string name="action_favorite">Favorite</string>
    <string name="action_search">Search</string>
    <string name="list">List</string>
    <string name="filter">Filter</string>
    <string name="map">Map</string>
    <string name="title_activity_main">DeepEstate</string>
    <string name="title_activity_assets_list">AssetsListActivity</string>
    <string name="title_activity_filters">FiltersActivity</string>
</resources>
