<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_action"
        android:title="@string/action_search"
        app:showAsAction="always|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_name"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/list_activity"
        android:icon="@drawable/list_icon"
        android:title="@string/list"
        app:showAsAction="always"/>

</menu>